<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pacman</string>
    <string name="action_settings">Settings</string>
    <string name="btn1">Play Game</string>
    <string name="btn2">View Offers</string>
    <string name="btn3">Favourite Location</string>
    <string name="btn4">Leaderboard</string>
    <string name="btn5">Play Offline</string>
    <string name="btn6">Return to Main Account</string>
    
    <string name="play">Play Game</string>
    <string name="offer">View Offer</string>
    <string name="location">Favourite Location</string>
    <string name="leader">Leaderboard</string>
    <string name="offline">Play Offline</string>
    <string name="account">Main Account</string>

</resources>
