<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:orientation="vertical" >
    
<ImageView 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content"
    android:layout_gravity="center" 
    android:id="@+id/pacman"  
    android:src="@drawable/pacman"/>

<Button 
    android:layout_height="wrap_content" 
    android:layout_width="wrap_content" 
    android:textColor="#ffff00" 
    android:id="@+id/btn1" 
    android:text="@string/btn1"
    android:layout_gravity="center"/>

<Button
    android:id="@+id/btn2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text="@string/btn2"
    android:textColor="#ffff00" />

<Button 
    android:layout_height="wrap_content" 
    android:layout_width="wrap_content" 
    android:textColor="#ffff00" 
    android:id="@+id/btn3" 
    android:text="@string/btn3"
    android:layout_gravity="center"/>

<Button 
    android:layout_height="wrap_content" 
    android:layout_width="wrap_content" 
    android:textColor="#ffff00" 
    android:id="@+id/btn4" 
    android:text="@string/btn4"
    android:layout_gravity="center"/>

<Button 
    android:layout_height="wrap_content" 
    android:layout_width="wrap_content" 
    android:textColor="#ffff00" 
    android:id="@+id/btn5" 
    android:text="@string/btn5"
    android:layout_gravity="center"/>

<Button 
    android:layout_height="wrap_content" 
    android:layout_width="wrap_content" 
    android:textColor="#ffff00" 
    android:id="@+id/btn6" 
    android:text="@string/btn6"
    android:layout_gravity="center"/>

</LinearLayout>